--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/main.scss css/style.css"
   },
-  "author": "Tatiane Mikye",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^4.9.0"
